# comfyui-deploy

./: Dockerfile  Dockerfile.runpod  install.sh
.github/workflows/: build-image-runpod.yml  build-image.yml
extras/: post_start.sh  start.sh
extras/ComfyUI-Batch-Process/: README.md  __init__.py  pyproject.toml  requirements.txt
extras/ComfyUI-Batch-Process/nodes/: image_batch_loader.py  image_batch_saver.py  lora_batch_loader.py  text_modify_tool.py  txt_batch_loader.py  video_batch_saver.py
extras/ComfyUI-RMBG/: README.md  __init__.py  pyproject.toml  requirements.txt  update.md
extras/ComfyUI_INSTARAW/: __init__.py  requirements.txt
extras/ComfyUI_Swwan/: .gitignore  C_math.py  INSTALLATION_CHECKLIST.md  LICENSE  QUICK_START.md  README.md  README_CN.md  __init__.py  bounded_image_crop.py  crop_by_mask_v2.py  crop_by_mask_v3.py  crop_by_mask_v4.py  crop_by_mask_v5.py  image_batch_utils.py  image_blend.py  image_nodes.py  image_resize_sum.py  image_scale_by_aspect_ratio_v2.py  io_nodes.py  layerstyle_utils.py  main_unit.py  math_expression.py  node_nsfw.py  nodes_switch.py  requirements.txt  restore_crop_box.py  (+6 more)
lib/: common.sh  nodes.sh
workflows/: animator_v25.sh  controlnt.sh  feihou_animator.sh  icy_scail_2.sh  instaraw_big.sh  instaraw_booba.sh  instaraw_bypass_max.sh  instaraw_faceswap.sh  instaraw_teleport.sh  instaraw_wan22.sh  instaraw_zimage.sh  kiara_sasat.sh  ofm_dataset_gen.sh  ofm_dt_gen3.sh  ofm_faceswp.sh  ofm_i2v_gen3.sh  ofm_nsfw.sh  ofm_skin_gen3.sh  ofm_tech_v2.sh  ofm_zit_gen.sh  ofmtech_identity_swap.sh  privateki.sh  tokyo_sage.sh
(+83 files in other folders)
